Update Order entity

--- a/deskover-dashboard-website/src/app/components/home/manage/orders/orders.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/orders/orders.component.html
@@ -24,9 +24,9 @@
             <label [for]="'filter-active'" class="col-form-label">Trạng thái:</label>
           </div>
           <div class="col-md-auto col-sm-12 mt-0 mt-md-2">
-            <select id="filter-category" class="form-select" [(ngModel)]="orderStatus">
+            <select id="filter-category" class="form-select" [(ngModel)]="orderStatusCode">
               <option [ngValue]="null">-- Tất cả --</option>
-              <option *ngFor="let orderStatus of orderStatuses" [ngValue]="orderStatus">{{orderStatus.status}}</option>
+              <option *ngFor="let orderStatus of orderStatuses" [ngValue]="orderStatus.code">{{orderStatus.status}}</option>
             </select>
           </div>
         </div>
@@ -34,38 +34,29 @@
 
       <div class="card-body p-0">
         <div class="table-responsive p-3">
-          <!--<table datatable [dtOptions]="dtOptions"
+          <table datatable [dtOptions]="dtOptions"
                  class="table table-hover table-sm nowrap w-100">
             <thead class="table-primary">
             <tr>
-              <th class="align-middle">Ảnh</th>
-              <th class="align-middle">Tên</th>
-              <th class="align-middle">Slug</th>
-              <th class="align-middle">Mô tả</th>
-              <th class="align-middle">Danh mục cha</th>
-              <th class="align-middle text-center">Ngày cập nhật</th>
-              <th class="align-middle text-end">Công cụ</th>
+              <th>Mã đơn hàng</th>
+              <th>Tên khách hàng</th>
+              <th>Số điện thoại</th>
+              <th>Địa chỉ</th>
             </tr>
             </thead>
             <tbody *ngIf="orders?.length !== 0">
-            <tr *ngFor="let subcategory of orders; let i = index">
+            <tr *ngFor="let order of orders; let i = index">
               <td class="align-middle">
-                <img src="{{ subcategory.imgUrl || 'assets/images/no-image.png' }}" class="img-fluid img-thumbnail  img-50">
+                {{ order.orderCode }}
               </td>
               <td class="align-middle">
-                {{ subcategory.name }}
+                {{ order.user.fullname }}
               </td>
               <td class="align-middle">
-                {{ subcategory.slug }}
+                {{ order.orderDetail.tel }}
               </td>
               <td class="align-middle">
-                {{ subcategory.description }}
-              </td>
-              <td class="align-middle">
-                {{ subcategory.category.name }}
-              </td>
-              <td class="align-middle text-center">
-                {{ subcategory.modifiedAt | date: 'dd/MM/yyyy' }}
+                {{ order.orderDetail.address }}
               </td>
             </tr>
             </tbody>
@@ -74,7 +65,7 @@
               <td colspan="7" class="text-center">Không tìm thấy kết quá</td>
             </tr>
             </tbody>
-          </table>-->
+          </table>
         </div>
       </div>
     </div>
