--- a/deskover-ecommerce-website/src/main/resources/templates/components/header.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/components/header.html
@@ -11,6 +11,7 @@
     <!-- Main Theme Styles + Bootstrap-->
     <link rel="stylesheet" th:href="@{/css/theme.min.css}">
     <!-- Vendor Styles including: Font Icons, Plugins, etc.-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" media="screen" th:href="@{/vendor/simplebar/dist/simplebar.min.css}" />
     <link rel="stylesheet" media="screen" th:href="@{/vendor/tiny-slider/dist/tiny-slider.css}" />
     <link rel="stylesheet" media="screen" th:href="@{/vendor/drift-zoom/dist/drift-basic.min.css}" />
