--- a/deskover-ecommerce-website/src/main/resources/templates/components/scripts.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/components/scripts.html
@@ -13,5 +13,7 @@
 <script th:src="@{/js/theme.min.js}"></script>
 <!-- Angularjs script-->
 <script th:src="@{/vendor/angularjs/dist/angular.min.js}"></script>
+<script th:src="@{/vendor/ngStorage/dist/ngStorage.min.js}"></script>
+<script th:src="@{/vendor/ngRoute/dist/angular-route.min.js}"></script>
 <script th:src="@{/app/main.angular.js}"></script>
 </div>
