--- a/deskover-ecommerce-website/src/main/resources/templates/cart.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/cart.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" th:replace="~{layout/layout :: layout(  
         ~{::title},
-        ~{::#modal},
+        ~{::modal_out},
+        ~{::modal_in},
+        ~{::#handheld},
         ~{::#content}
     )}">
 
 <head>
-    <title>Deskover: giỏ hàng</title>
+    <title>Deskover: Chi Tiết Giỏ Hàng</title>
 </head>
 
 <body>
-    <div id="modal">
-
-    </div>
+    <div id="modal_out"></div>
+    <div id="modal_in"></div>
     <div id="content">
         <!-- Page Title-->
         <div class="page-title-overlap bg-dark pt-4">
@@ -20,15 +21,15 @@
                 <div class="order-lg-2 mb-3 mb-lg-0 pt-lg-2">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb breadcrumb-light flex-lg-nowrap justify-content-center justify-content-lg-start">
-                            <li class="breadcrumb-item"><a class="text-nowrap" href="index.html"><i class="ci-home"></i>Home</a></li>
-                            <li class="breadcrumb-item text-nowrap"><a href="shop-grid-ls.html">Shop</a>
+                            <li class="breadcrumb-item"><a class="text-nowrap" th:href="@{/index}"><i class="ci-home"></i>Trang chủ</a></li>
+                            <li class="breadcrumb-item text-nowrap"><a th:href="@{/shop}">Cửa hàng</a>
                             </li>
-                            <li class="breadcrumb-item text-nowrap active" aria-current="page">Cart</li>
+                            <li class="breadcrumb-item text-nowrap active" aria-current="page">Giỏ hàng</li>
                         </ol>
                     </nav>
                 </div>
                 <div class="order-lg-1 pe-lg-4 text-center text-lg-start">
-                    <h1 class="h3 text-light mb-0">Your cart</h1>
+                    <h1 class="h3 text-light mb-0">Chi Tiết Giỏ Hàng</h1>
                 </div>
             </div>
         </div>
@@ -37,85 +38,49 @@
                 <!-- List of items-->
                 <section class="col-lg-8">
                     <div class="d-flex justify-content-between align-items-center pt-3 pb-4 pb-sm-5 mt-1">
-                        <h2 class="h6 text-light mb-0">Products</h2><a class="btn btn-outline-primary btn-sm ps-2" href="shop-grid-ls.html"><i class="ci-arrow-left me-2"></i>Continue shopping</a>
+                        <h2 class="h6 text-light mb-0">Sản phẩm</h2><a class="btn btn-outline-primary btn-sm ps-2" href="shop-grid-ls.html"><i class="ci-arrow-left me-2"></i>Tiếp tục mua sắm</a>
                     </div>
                     <!-- Item-->
-                    <div class="d-sm-flex justify-content-between align-items-center my-2 pb-3 border-bottom">
-                        <div class="d-block d-sm-flex align-items-center text-center text-sm-start"><a class="d-inline-block flex-shrink-0 mx-auto me-sm-4" href="shop-single-v1.html"><img src="img/shop/cart/01.jpg" width="160" alt="Product"></a>
+                    <div class="d-sm-flex justify-content-between align-items-center my-2 pb-3 border-bottom" ng-repeat="item in cart.items">
+                        <div class="d-block d-sm-flex align-items-center text-center text-sm-start"><a class="d-inline-block flex-shrink-0 mx-auto me-sm-4" href="shop-single-v1.html">
+                                <img src="{{item.imgUrl}}" width="160" alt="{{item.slug}}"></a>
                             <div class="pt-2">
-                                <h3 class="product-title fs-base mb-2"><a href="shop-single-v1.html">Women Colorblock Sneakers</a></h3>
-                                <div class="fs-sm"><span class="text-muted me-2">Size:</span>8.5</div>
-                                <div class="fs-sm"><span class="text-muted me-2">Color:</span>White &amp; Blue</div>
-                                <div class="fs-lg text-accent pt-2">$154.<small>00</small></div>
+                                <h3 class="product-title fs-base mb-2"><a href="/shop/item?p={{item.slug}}">{{item.name}}</a></h3>
+                                <div class="fs-sm"><span class="text-muted me-2" ng-if="item.category">Danh mục:</span>{{item.category}}</div>
+                                <div class="fs-sm"><span class="text-muted me-2" ng-if="item.subcategory">Loại:</span>{{item.subcategory}}</div>
+                                <div class="fs-lg text-accent pt-2">{{item.price|number}} <small>VND</small></div>
                             </div>
                         </div>
                         <div class="pt-2 pt-sm-0 ps-sm-3 mx-auto mx-sm-0 text-center text-sm-start" style="max-width: 9rem;">
-                            <label class="form-label" for="quantity1">Quantity</label>
-                            <input class="form-control" type="number" id="quantity1" min="1" value="1">
-                            <button class="btn btn-link px-0 text-danger" type="button"><i class="ci-close-circle me-2"></i><span class="fs-sm">Remove</span></button>
+                            <label class="form-label" for="{{item.slug}}">Số lượng</label>
+                            <input class="form-control" type="number" id="{{item.slug}}" min="1" max="5" ng-model="item.amount" ng-keyup="cart.valid.amount(this)">
+                            <button class="btn btn-link px-0 text-danger" type="button" ng-click="cart.remove(item)"><i class="ci-close-circle me-2"></i><span class="fs-sm">Xóa</span></button>
                         </div>
                     </div>
-                    <!-- Item-->
-                    <div class="d-sm-flex justify-content-between align-items-center my-2 pb-3 border-bottom">
-                        <div class="d-block d-sm-flex align-items-center text-center text-sm-start"><a class="d-inline-block flex-shrink-0 mx-auto me-sm-4" href="shop-single-v1.html"><img src="img/shop/cart/02.jpg" width="160" alt="Product"></a>
-                            <div class="pt-2">
-                                <h3 class="product-title fs-base mb-2"><a href="shop-single-v1.html">TH Jeans City Backpack</a></h3>
-                                <div class="fs-sm"><span class="text-muted me-2">Brand:</span>Tommy Hilfiger</div>
-                                <div class="fs-sm"><span class="text-muted me-2">Color:</span>Khaki</div>
-                                <div class="fs-lg text-accent pt-2">$79.<small>50</small></div>
-                            </div>
-                        </div>
-                        <div class="pt-2 pt-sm-0 ps-sm-3 mx-auto mx-sm-0 text-center text-sm-start" style="max-width: 9rem;">
-                            <label class="form-label" for="quantity2">Quantity</label>
-                            <input class="form-control" type="number" id="quantity2" min="1" value="1">
-                            <button class="btn btn-link px-0 text-danger" type="button"><i class="ci-close-circle me-2"></i><span class="fs-sm">Remove</span></button>
+                    <div class=" my-2 pb-3 border-bottom" ng-if="cart.total == 0">
+                        <div class="w-100 align-items-center text-center">
+                            <img th:src="@{/img/empty-cart.png}" class="mb-5 mt-5" style="height: 200px;">
+                            <h1 class="mt-50 heading-h2">Giỏ hàng của bạn trống</h1>
+                            <p class="mt-50 sub-heading-h2">Có vẻ bạn chưa thêm sản phẩm nào vào giỏ hàng</p>
                         </div>
                     </div>
-                    <!-- Item-->
-                    <div class="d-sm-flex justify-content-between align-items-center my-2 pb-3 border-bottom">
-                        <div class="d-block d-sm-flex align-items-center text-center text-sm-start"><a class="d-inline-block flex-shrink-0 mx-auto me-sm-4" href="shop-single-v1.html"><img src="img/shop/cart/03.jpg" width="160" alt="Product"></a>
-                            <div class="pt-2">
-                                <h3 class="product-title fs-base mb-2"><a href="shop-single-v1.html">3-Color Sun Stash Hat</a></h3>
-                                <div class="fs-sm"><span class="text-muted me-2">Brand:</span>The North Face</div>
-                                <div class="fs-sm"><span class="text-muted me-2">Color:</span>Pink / Beige / Dark blue</div>
-                                <div class="fs-lg text-accent pt-2">$22.<small>50</small></div>
-                            </div>
-                        </div>
-                        <div class="pt-2 pt-sm-0 ps-sm-3 mx-auto mx-sm-0 text-center text-sm-start" style="max-width: 9rem;">
-                            <label class="form-label" for="quantity3">Quantity</label>
-                            <input class="form-control" type="number" id="quantity3" min="1" value="1">
-                            <button class="btn btn-link px-0 text-danger" type="button"><i class="ci-close-circle me-2"></i><span class="fs-sm">Remove</span></button>
-                        </div>
-                    </div>
-                    <!-- Item-->
-                    <div class="d-sm-flex justify-content-between align-items-center my-2 pb-3 border-bottom">
-                        <div class="d-block d-sm-flex align-items-center text-center text-sm-start"><a class="d-inline-block flex-shrink-0 mx-auto me-sm-4" href="shop-single-v1.html"><img src="img/shop/cart/04.jpg" width="160" alt="Product"></a>
-                            <div class="pt-2">
-                                <h3 class="product-title fs-base mb-2"><a href="shop-single-v1.html">Cotton Polo Regular Fit</a></h3>
-                                <div class="fs-sm"><span class="text-muted me-2">Size:</span>42</div>
-                                <div class="fs-sm"><span class="text-muted me-2">Color:</span>Light blue</div>
-                                <div class="fs-lg text-accent pt-2">$9.<small>00</small></div>
-                            </div>
-                        </div>
-                        <div class="pt-2 pt-sm-0 ps-sm-3 mx-auto mx-sm-0 text-center text-sm-start" style="max-width: 9rem;">
-                            <label class="form-label" for="quantity4">Quantity</label>
-                            <input class="form-control" type="number" id="quantity4" min="1" value="1">
-                            <button class="btn btn-link px-0 text-danger" type="button"><i class="ci-close-circle me-2"></i><span class="fs-sm">Remove</span></button>
-                        </div>
-                    </div>
-                    <button class="btn btn-outline-accent d-block w-100 mt-4" type="button"><i class="ci-loading fs-base me-2"></i>Update cart</button>
+                    <button class="btn btn-outline-accent d-block w-100 mt-4" type="button"><i class="ci-remove fs-base me-2"></i>Xóa tất cả</button>
                 </section>
                 <!-- Sidebar-->
                 <aside class="col-lg-4 pt-4 pt-lg-0 ps-xl-5">
                     <div class="bg-white rounded-3 shadow-lg p-4">
                         <div class="py-2 px-xl-2">
                             <div class="text-center mb-4 pb-3 border-bottom">
-                                <h2 class="h6 mb-3 pb-1">Subtotal</h2>
-                                <h3 class="fw-normal">$265.<small>00</small></h3>
+                                <h2 class="h3 mb-3 pb-1">Thông tin</h2>
                             </div>
-                            <div class="mb-3 mb-4">
-                                <label class="form-label mb-3" for="order-comments"><span class="badge bg-info fs-xs me-2">Note</span><span class="fw-medium">Additional comments</span></label>
-                                <textarea class="form-control" rows="6" id="order-comments"></textarea>
+                            <ul class="list-unstyled fs-sm pb-2 border-bottom">
+                                <li class="d-flex justify-content-between align-items-center"><span class="me-2">Tổng tiền:</span><span class="text-end">{{cart.total|number}}<small> VND</small></span></li>
+                                <li class="d-flex justify-content-between align-items-center"><span class="me-2">Phí vận chuyển:</span><span class="text-end">—</span></li>
+                                <li class="d-flex justify-content-between align-items-center"><span class="me-2">Giảm giá:</span><span class="text-end">—</span></li>
+                            </ul>
+                            <div class="text-center mb-4 pb-3 border-bottom">
+                                <h2 class="h6 mb-3 pb-1">Tổng tiền thanh toán</h2>
+                                <h3 class="fw-normal">{{cart.total|number}} <small>VND</small></h3>
                             </div>
                             <div class="accordion" id="order-options">
                                 <div class="accordion-item">
@@ -172,7 +137,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div><a class="btn btn-primary btn-shadow d-block w-100 mt-4" href="checkout-details.html"><i class="ci-card fs-lg me-2"></i>Proceed to Checkout</a>
+                            </div><a class="btn btn-primary btn-shadow d-block w-100 mt-4" href="checkout-details.html"><i class="ci-card fs-lg me-2"></i>Đặt hàng</a>
                         </div>
                     </div>
                 </aside>
